views: handle command-click on bookmark menu folders

A command-click on a bookmark menu folder is different from a plain click - it
should call into the delegate for something to happen rather than opening the
submenu.

In the process I lightly refactored MenuController::OnMouseReleased to make
this logic a bit clearer.

Bug: 892928
Change-Id: I2d45f253157e9acb652acf4b224bee1438db5b9b
Reviewed-on: https://chromium-review.googlesource.com/c/1478088
Commit-Queue: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Scott Violet <sky@chromium.org>
Auto-Submit: Elly Fong-Jones <ellyjones@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Cr-Commit-Position: refs/heads/master@{#633522}
Former-commit-id: a6d8e2dcff7cad97904acfa533ae6aee57843ae5