ui/views/controls/menu/menu_controller.cc
@@ -712,12 +712,15 @@ void MenuController::OnMouseReleased(SubmenuView* source,
     }
   }
 
-  // We can use Ctrl+click or the middle mouse button to recursively open urls
-  // for selected folder menu items. If it's only a left click, show the
-  // contents of the folder.
-  if (!part.is_scroll() && part.menu &&
-      !(part.should_submenu_show && part.menu->HasSubmenu() &&
-        (event.flags() & ui::EF_LEFT_MOUSE_BUTTON))) {
+  // A plain left click on a folder that has children serves to open that folder
+  // by setting the selection, rather than executing a command via the delegate
+  // or doing anything else.
+  // TODO(ellyjones): Why isn't a case needed here for EF_CONTROL_DOWN?
+  bool plain_left_click_with_children =
+      part.should_submenu_show && part.menu && part.menu->HasSubmenu() &&
+      (event.flags() & ui::EF_LEFT_MOUSE_BUTTON) &&
+      !(event.flags() & ui::EF_COMMAND_DOWN);
+  if (!part.is_scroll() && part.menu && !plain_left_click_with_children) {
     if (active_mouse_view_tracker_->view()) {
       SendMouseReleaseToActiveView(source, event);
       return;
